cleanup core tests